Move around some files and prepare for implementation of non-C++11 logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,7 @@ project(Logger CXX)
 set(CMAKE_CXX_FLAGS "-fPIC -std=c++11")
 
 add_subdirectory(src)
+
+include_directories(src/c++0x_logger)
+
+add_subdirectory(tests)
