--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,2 @@
-set(sources log_utils.cpp)
-add_library(logger STATIC ${sources})
-
-add_executable(test.x test.cpp)
-target_link_libraries(test.x logger)
+#add_subdirectory(logger)
+add_subdirectory(c++0x_logger)
