Second logger in place.
Need to unify the interfaces of the two loggers, so that we can switch between the C++11 capable and
the non-C++11 capabe under the hood

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_executable(c++0x_logger_test.x c++0x_logger_test.cpp)
 target_link_libraries(c++0x_logger_test.x c++0x_logger)
+
+add_executable(logger_test.x logger_test.cpp)
