--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS "-fPIC -std=c++11")
 
 add_subdirectory(src)
 
+include_directories(src/logger)
 include_directories(src/c++0x_logger)
 
 add_subdirectory(tests)
