Add logger using boost::mutex and boost::shared_ptr instead of std::mutex and std::unique_ptr.
It still does not compile, we have to remove the use of variadic templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,20 @@ cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
 
 project(Logger CXX)
 
-set(CMAKE_CXX_FLAGS "-fPIC -std=c++11")
+option(ENABLE_CXX11 "Enables C++11 support" OFF)
+
+find_package(Boost 1.54 COMPONENTS thread REQUIRED)
+
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
 add_subdirectory(src)
 
-include_directories(src/logger)
-include_directories(src/c++0x_logger)
+if(ENABLE_CXX11)
+   set(CMAKE_CXX_FLAGS "-fPIC -std=c++11")
+   include_directories(src/c++0x_logger)
+else(ENABLE_CXX11)
+   set(CMAKE_CXX_FLAGS "-fPIC -std=gnu++98")
+   include_directories(src/boost_logger)
+endif(ENABLE_CXX11)
 
 add_subdirectory(tests)
