Compiles even without C++11 but generates an empty log.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,14 @@ project(Logger CXX)
 
 option(ENABLE_CXX11 "Enables C++11 support" OFF)
 
-find_package(Boost 1.54 COMPONENTS thread REQUIRED)
+if(ENABLE_CXX11)
+   add_definitions(-DHAS_CXX11_SUPPORT)
+endif()	
 
-include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
+message(STATUS "C++11 support enabled")
+set(CMAKE_CXX_FLAGS "-fPIC -std=c++0x")
+include_directories(src/c++0x_logger)
 
 add_subdirectory(src)
-
-if(ENABLE_CXX11)
-   set(CMAKE_CXX_FLAGS "-fPIC -std=c++11")
-   include_directories(src/c++0x_logger)
-else(ENABLE_CXX11)
-   set(CMAKE_CXX_FLAGS "-fPIC -std=gnu++98")
-   include_directories(src/boost_logger)
-endif(ENABLE_CXX11)
 
 add_subdirectory(tests)
