--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(Logger CXX)
 
 option(ENABLE_CXX11 "Enables C++11 support" OFF)
 
+set(CMAKE_MODULE_PATH
+    ${CMAKE_MODULE_PATH}
+    ${CMAKE_SOURCE_DIR}/cmake)
+
+find_package(Eigen3 3.0.0 REQUIRED)
+include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
+
 if(ENABLE_CXX11)
    add_definitions(-DHAS_CXX11_SUPPORT)
 endif()	
